[tool.poetry]
name = "rubix-pi-gpio"
version = "0.0.1"
description = ""
authors = ["NubeDev <aidan@envrioservices.com.au>"]

[tool.poetry.dependencies]
python = "^3.6"
"RPi.GPIO" = "^0.7.0"
gunicorn = "^20.0.4"
gevent = [
    { version = "20.12.1", markers = "platform_machine == 'x86_64'" },
    { git = "https://github.com/gevent/gevent.git", tag = "20.12.1", markers = "platform_machine != 'x86_64'" }
]
click = "^7.1.2"
toml = "^0.10.2"
schedule = "^1.1.0"
rubix-registry = {git = "https://github.com/NubeIO/rubix-registry", rev = "v1.0.0"}
rubix-http = {git = "https://github.com/NubeIO/rubix-http", rev = "v1.1.1"}
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
